# s2ools

./: .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml
crates/s2ools/: Cargo.toml
crates/s2ools/src/: lib.rs
examples/basic/: Cargo.toml
examples/basic/examples/: basic.rs
