[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.dependencies]


[workspace.lints.clippy]
cargo       = "warn"
complexity  = "warn"
correctness = "deny"
pedantic    = "warn"
perf        = "warn"
restriction = "allow"
style       = "warn"
suspicious  = "warn"

[workspace.lints.rust]
deprecated_safe         = "warn"
future_incompatible     = "warn"
keyword_idents          = "warn"
let_underscore          = "warn"
nonstandard_style       = "warn"
refining_impl_trait     = "warn"
rust_2018_compatibility = "warn"
rust_2018_idioms        = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
unused                  = "warn"

[workspace.package]
authors    = ["Andrew Cherry (@kolektiv)"]
categories = []
edition    = "2024"
keywords   = []
license    = "AGPL-3.0-only"
readme     = "README.md"
repository = "https://github.com/kolektiv/s2ools"
version    = "0.1.0"
