[workspace]
members  = ["crates/*", "examples/*"]
resolver = "2"

[workspace.dependencies]
streamstore = { version = "0.10" }
tokio       = { version = "1", features = ["full"] }

[workspace.lints.clippy]
cargo       = "warn"
complexity  = "warn"
correctness = "deny"
pedantic    = "warn"
perf        = "warn"
restriction = "allow"
style       = "warn"
suspicious  = "warn"

[workspace.lints.rust]
deprecated_safe         = "warn"
future_incompatible     = "warn"
keyword_idents          = "warn"
let_underscore          = "warn"
nonstandard_style       = "warn"
refining_impl_trait     = "warn"
rust_2018_compatibility = "warn"
rust_2018_idioms        = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
unused                  = "warn"

[workspace.package]
authors    = ["Andrew Cherry (@kolektiv)"]
categories = ["asynchronous", "data-structures"]
edition    = "2024"
keywords   = ["s2", "stream"]
license    = "AGPL-3.0-only"
readme     = "README.md"
repository = "https://github.com/kolektiv/s2ools"
version    = "0.1.0"
