[dependencies]

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Tools for S2"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "s2ools"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
