[dependencies]
streamstore.workspace = true
tokio.workspace       = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Basic Examples for s2ools"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "basic"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
